# cs_test

./: .dockerignore  .gitignore  CS Safety & Quality Test.md  Cs.md  Dockerfile  Dockerfile copy  README_DOCKER_2.md  README_DOCKER_WINDOWS.md  asml_ai_content_development.ipynb  build_and_run.ps1  build_image.ps1  config.json  docker-compose.yml  filetree.md  local_llm.py  local_model.ipynb  local_model.md  local_whisper.py  requirements_2.txt  run_pipeline.ps1  setup_models.ps1  test.md
Ethics/: Ethics_Document_ASML_CS.md  Evaluation_metrics.md  MoSCoW_Functional_Requirements_ASML_CS.xlsx  Non-Functional_Requirments.md  Project_Scope_v3.docx  Risk_Assessment-ASML.md  Stakeholder_analysis.md
Evidence/: Learning_log.md  Literature_review.md  Report.md  Research.md  SME_Evaluation_Form_Hybrid.docx  goal-1.md
Plan/: PROJECT_ROADMAP.md  Sprint_01_Project_Initiation.md  Sprint_02_Literature_Review.md  Sprint_03_ASR_Transcription.md  Sprint_04_LLM_Structuring.md  Sprint_05_Timestamp_Alignment_1.md  Sprint_06_Timestamp_Alignment_2.md  Sprint_07_Retrieval_System_1.md  Sprint_08_Retrieval_System_2.md  Sprint_09_MicroClip_Assembly.md  Sprint_10_Evaluation_Documentation.md  Sprint_11_Final_Delivery.md  masters.md
cs_ai/: pyproject.toml
scripts/: README.md  boundary_detection.py  clean_transcript.py  compare_reports.py  eval_wer.py  extract_audio.py  hf_model.py  iteration_workflow.md  prompts.py  prompts_2.py  semantic_segmentation.py  setup_local_llm.md  sme_evaluation_form.md  structure_batch.py  structure_batch_2.py  test.md  test.py  timestamp_alignment.py  (+1 more)
