[project]
name = "cs"
version = "0.1.0"
description = ""
authors = [
    { name = "Neilross Daniel Manohar", email = "112754523+neildaniel221270@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "torch (>=2.2.0,<3.0.0)",
    "youtube-transcript-api (>=1.2.4,<2.0.0)",
    "sentence-transformers (>=5.2.3,<6.0.0)",
    "transformers (>=5.2.0,<6.0.0)",
    "openai (>=2.21.0,<3.0.0)",
    "anthropic (>=0.82.0,<0.83.0)",
    "chromadb (>=1.5.0,<2.0.0)",
    "whisper (>=1.1.10,<2.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "easyocr (>=1.7.2,<2.0.0)",
    "jiwer (>=4.0.0,<5.0.0)",
    "spacy (>=3.8.11,<4.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)"
]

[tool.poetry]
packages = [{ include = "cs", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"